[project]
name = "csss-site-backend"
version = "0.1"
requires-python = "~=3.13.0"

dependencies = [
    # major
    "fastapi==0.135.4",
    "gunicorn==25.3.0",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "google-api-python-client==2.194.0",
    # minor
    "xmltodict==0.13.0",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.12", # linting and formatter
    "pre-commit",
]

test = [
    "pytest", # test framework
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://api.sfucsss.org/"

# Pytest: Test framework
[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
testpaths = [
    "tests",
]
norecursedirs = "tests/wip"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Ruff: Formatter and linter
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    "src/alembic/*"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "A", "PTH", "W", "RUF", "C4", "PIE", "Q", "FLY"] # "ANN"
ignore = ["E501", "F401", "N806"]

# [Based]Pyright: Type checker/LSP
[tool.pyright]
executionEnvironments = [
    { root = "src", pythonVersion = "3.13" },
    { root = "tests", extraPaths=["src"], pythonVersion = "3.13" }
]
typeCheckingMode = "standard"
reportAny = "none" # Allow the use of `Any` type
reportExplicitAny = "none" # Allow the declaration of `Any` type
